<resources>
    <string name="app_name">06-InmobiliariaPMDM-master</string>
    <string name="tituloCrear">INFORMACIÓN INMUEBLE</string>
    <string name="direccion">Dirección</string>
    <string name="numero">Numero</string>
    <string name="ciudad">Ciudad</string>
    <string name="provincia">Provincia</string>
    <string name="codigo_postal">Codigo postal</string>
    <string name="cancelar">CANCELAR</string>
    <string name="crear">CREAR</string>
</resources>